--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -1,6 +1,22 @@
-<h2>{{username}}</h2>
-<p>{{nome}}</p>
-<p>{{local}}</p>
-<p>{{idade}}</p>
-<p>{{profissao}}</p>
-<p>{{empresa}}</p>
+<div class="perfil">
+  <div class="perfil-stats">
+    <img [src]="perfil.foto" alt="Foto perfil de um dev web"/>
+    <div>
+      <strong>{{perfil.publicacoes}}</strong><br>Publicações
+    </div>
+    <div>
+      <strong>{{perfil.seguidores}}</strong><br>Seguidores
+    </div>
+    <div>
+      <strong>{{perfil.seguindo}}</strong><br>Seguindo
+    </div>
+  </div>
+  <div class="perfil-info">
+    <h2>{{perfil.nome}}</h2>
+    <p>{{perfil.username}}</p>
+    <p>🚩{{perfil.local}}</p>
+    <p>📅{{perfil.idade}}</p>
+    <p>🧑‍💻{{perfil.profissao}}</p>
+    <p>🏭{{perfil.empresa}}</p>
+  </div>
+</div>
