Aula 29/05 - inicio da aula, adicionado routerLink

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,2 +1,9 @@
-<app-produtos></app-produtos>
-<app-perfil></app-perfil>
+<nav>
+  <a [routerLink]="['/nome']">Nome Componente</a>
+  |
+  <a [routerLink]="['/perfil']">Perfil</a>
+  |
+  <a [routerLink]="['/produtos']">Produtos</a>
+</nav>
+<hr />
+<router-outlet></router-outlet>
