Aula 29/05 - adicionado solucao do desafio (componente tarefas)

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -4,6 +4,8 @@
   <a [routerLink]="['/perfil']">Perfil</a>
   |
   <a [routerLink]="['/produtos']">Produtos</a>
+  |
+  <a [routerLink]="['/tarefas']">Tarefas</a>
 </nav>
 <hr />
 <router-outlet></router-outlet>
