--- a/src/app/components/tarefas/tarefas.component.html
+++ b/src/app/components/tarefas/tarefas.component.html
@@ -1,7 +1,9 @@
 <ol>
   @for (tarefa of listaTarefas; track tarefa) {
-    <li [style.color]="tarefa.concluido ? 'green' : 'black'">
+    <li [style.color]="tarefa.concluido ? 'blue' : 'gray'"
+    (click)="toggleConcluido(tarefa)">
       {{tarefa.titulo}} > {{tarefa.descricao}}
     </li>
+
   }
 </ol>
