Aula 30/05 - atualizado rotas para exibir climaTable

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -6,6 +6,8 @@
   <a [routerLink]="['/produtos']">Produtos</a>
   |
   <a [routerLink]="['/tarefas']">Tarefas</a>
+  |
+  <a [routerLink]="['/clima']">ClimaTable</a>
 </nav>
 <hr />
 <router-outlet></router-outlet>
